--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-pandas
-numpy
-scikit-learn
-matplotlib
-seaborn
-joblib
-streamlit
-pyyaml
-imbalanced_learn
-streamlit
+pandas==2.2.3
+numpy==2.1.2
+scikit-learn==1.6.1
+matplotlib==3.10.1
+seaborn==0.13.2
+joblib==1.4.2
+streamlit==1.44.1
+pyyaml==6.0.2
+imbalanced-learn==0.13.0
